# F16

./: .editorconfig  .env.template  .gitignore  .prettierignore  ASSURYAL base connaissance agent.md  ASSURYAL closing souscription agent.md  ASSURYAL objections agent.md  MAXANCE catalogue produits agent.md  README.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js
.github/workflows/: ci.yml
admin/: .dockerignore  .env.template  Caddyfile  Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
admin/src/: App.tsx  index.css  main.tsx
admin/tests/: Simulation.test.tsx  setup.ts  smoke.test.tsx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  drizzle.config.ts  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.live.config.ts
backend/drizzle/: 0000_mute_obadiah_stane.sql  0001_moaning_smiling_tiger.sql  0002_lame_wiccan.sql  0003_brown_miss_america.sql  0004_realtime_triggers.sql  0005_public_the_hand.sql  0006_phone_hash.sql  0007_m12_lead_attribution.sql  0008_m12_creative_learnings.sql  0009_rapid_crusher_hogan.sql  0010_thankful_swordsman.sql  0011_serious_stone_men.sql  0012_third_karma.sql  0013_opposite_jack_murdock.sql  0014_gray_lord_tyger.sql
backend/scripts/: backend-keepalive.ps1  build-postal-code-index.ts  cf-access-google-idp.ts  cf-restore-hooks-dns.ts  cf-tunnel-migrate.ts  cf-tunnel-setup.ts  cf-webhook-skip-rule.ts  check-campaign.ts  db-backup.ts  db-restore.ts  dlq.ts  dump-thread.ts  email-previews.ts  enable-waha-hmac.ts  extension-ws-only.ts  gen-office-art.mjs  generate-creatives.ts  ingest-knowledge.ts  install-backend-keepalive.ps1  key-office-art.py  list-campaigns.ts  meta-golive.ts  place-test-call.ts  register-db-backup-task.ps1  reset-draft.ts  run-db-backup.ps1  schedule-voice-call.ts  seed-dev.ts  send-draft.ts  test-campaign-draft.ts  update-env.ts  verify-meta-access.ts  waha-check.ts  waha-set-webhook.ts
backend/src/: index.ts  logger.ts  types.ts
backend/tests/: db.smoke.test.ts  setup.ts  smoke.test.ts
docs/plans/: 2026-05-17-f16-design.md  2026-05-17-f16-implementation.md
docs/runbooks/: db-backups.md  publish-admin.md  secrets.md  (+1 more)
extension/: esbuild.config.mjs  package.json  tsconfig.json  vitest.config.ts
infra/: Caddyfile.example  README.md  docker-compose.dev.yml
pipecat/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  pyproject.toml
pipecat/src/f16_pipecat/: audiosocket.py  audiosocket_transport.py  backend.py  logging.py  pipeline.py  realtime_s2s.py  runner.py  server.py  transport.py  voice.py
pipecat/tests/: test_audiosocket.py  test_health.py  test_pipeline.py  test_runner.py  test_transport.py  test_voice.py
stagehand/: .dockerignore  .env.template  Dockerfile  package.json  vitest.config.ts
(+494 files in other folders)
